# ECE470_LAB

./: .gitignore  LICENSE  README.md
code/fmauch_universal_robot/ur_description/: CMakeLists.txt
code/fmauch_universal_robot/ur_description/config/ur3/: default_kinematics.yaml  my_joint_limits.yaml  my_kinematics.yaml  my_robot_calibration.yaml
code/fmauch_universal_robot/ur_description/config/ur3e/: default_kinematics.yaml  my_joint_limits.yaml
code/fmauch_universal_robot/ur_description/launch/: view_ur3.launch  view_ur3e.launch
code/fmauch_universal_robot/ur_description/urdf/: ur.xacro  ur3.urdf  ur3e.urdf
code/fmauch_universal_robot/ur_description/urdf/inc/: ur_macro.xacro
code/fmauch_universal_robot/ur_gazebo/: CMakeLists.txt
code/lab2pkg_turtle/: CMakeLists.txt  package.xml
code/lab2pkg_turtle/launch/: turtle_chase.launch
code/lab2pkg_turtle/script/: turtle_chase.py  turtle_spawn.py
code/lab3pkg_hanoi/: CMakeLists.txt  README.md
code/lab3pkg_hanoi/scripts/: lab3_exec.py  lab3_header.py
code/lab4pkg_fk/other/: MDHTrans.m  test.m
code/lab4pkg_fk/scripts/: lab4_exec.py  lab4_func.py  lab4_header.py
code/lab4pkg_fk/test/: test_fk.cpp
code/lab5_pkg_ik/: lab4_func.py
code/lab5pkg_ik/: CMakeLists.txt  README.md  package.xml
code/lab5pkg_ik/scripts/: lab5_func.py
code/lab5pkg_py2/: CMakeLists.txt  package.xml
code/lab5pkg_py2/scripts/: lab5_header.py  lab5_img.py
code/lab6pkg_improc/: CMakeLists.txt
code/lab7pkg_pick_place/: CMakeLists.txt  package.xml
code/lab7pkg_pick_place/scripts/: lab7_exec.py  lab7_func.py  lab7_img.py
code/ur3e_driver_ece470/: CMakeLists.txt  package.xml
code/ur3e_driver_ece470/src/: ur3e_driver_ece470.cpp
code/ur3e_driver_ece470/test/: test_move_arm.cpp
doc/: UR3e Network Connection.md
lab2/: TODO.md
lab2/lab2pkg_turtle/: CMakeLists.txt  README.md  package.xml
lab2/lab2pkg_turtle/config/: turtle_rviz.rviz
lab2/lab2pkg_turtle/launch/: turtle_chase.launch  turtle_tf2_demo.launch
lab2/lab2pkg_turtle/script/: turtle_chase.py  turtle_tf2_broadcaster.py
lab3/lab3pkg_hanoi/: CMakeLists.txt  README.md  package.xml
lab3/lab3pkg_hanoi/scripts/: lab3_exec.py  lab3_header.py  lab3_ur3e.py
lab4/lab4pkg_fk/: CMakeLists.txt  README.md  package.xml
lab4/lab4pkg_fk/scripts/: lab4_exec.py  lab4_func.py  lab4_header.py
lab4/lab4pkg_fk/test/: test_fk.cpp
lab5/lab5pkg_ik/: CMakeLists.txt  README.md  package.xml
lab5/lab5pkg_ik/scripts/: lab5_exec.py  lab5_exec_online.py  lab5_func.py  lab5_header.py  lab5_ur3e.py
lab6/Snapshot/: cksdk.py  opencv_display.py  readme.txt  save_image.py
lab6/lab5pkg_py/: README.md
lab6/lab5pkg_py/scripts/: lab5_exec.py  lab5_func.py  lab5_img.py
lab6/lab6pkg_improc/: README.md  package.xml
lab6/lab6pkg_improc/scripts/: lab6_exec.py  lab6_func.py  lab6_header.py  lab6_img.py  realsense_camera.py
lab7/: lab5_exec.py  lab5_func.py  lab5_img.py
lab7/lab7pkg_pick_place/: README.md  package.xml
lab7/lab7pkg_pick_place/scripts/: lab7_exec.py  lab7_func.py  lab7_img.py  lab7_ur3e.py
lab7/lab7pkg_pick_place/utils/: 90-ckusb.rules  README.md  install.sh
lab7/lab7pkg_pick_place/utils/script/: ckcamera.py  cksdk.py  opencv_display.py  save_image.py
lab7/lab7pkg_pick_place/utils/tools/x64/: camera_config  camera_test  camera_upgrade  soft_trigger
reference/: How to write a lab report SP20.docx  install.md  network_configuration.md  ubuntu_install.md
tex/: Labs.tex  appendixA.tex  appendixC.tex  appendixD.tex  lab1.tex  lab2.tex  lab3.tex  lab4.tex  lab5.tex  lab6.tex  lab7.tex
tex/old_files/: appendixB.tex  lab1_1.tex  lab2_old.tex  lab3_old.tex  lab3_oldversion.tex  lab4_old.tex  lab6.tex
